[gd_scene load_steps=10 format=2]

[ext_resource path="res://leaderboard/Leaderboard.gd" type="Script" id=1]
[ext_resource path="res://crash/white_bg.png" type="Texture" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://death/Aero.ttf"

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 1 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://death/Aero.ttf"

[sub_resource type="DynamicFont" id=5]
size = 20
use_mipmaps = true
use_filter = true
extra_spacing_char = 1
font_data = SubResource( 4 )

[sub_resource type="DynamicFontData" id=8]
font_path = "res://death/Aero.ttf"

[sub_resource type="DynamicFont" id=9]
size = 32
use_mipmaps = true
use_filter = true
font_data = SubResource( 8 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Top10" type="Node2D" parent="."]
position = Vector2( 0, 35 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="white_bg" type="Sprite" parent="."]
modulate = Color( 0.588235, 0.588235, 0.588235, 1 )
position = Vector2( 512.056, 16.0033 )
scale = Vector2( 1.00453, 0.0714628 )
texture = ExtResource( 2 )

[node name="Node2D" type="Node2D" parent="."]
z_index = 1

[node name="Header" type="Label" parent="Node2D"]
margin_left = 1.00006
margin_top = 0.406067
margin_right = 1025.0
margin_bottom = 35.4061
theme = SubResource( 3 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Furthest Explorations"
align = 1
valign = 1

[node name="Button" type="Button" parent="."]
margin_left = 6.0
margin_top = 5.0
margin_right = 136.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.729412, 0.729412, 0.729412, 1 )
text = "Back to Menu"
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
